# pepe

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: CI.yaml
src/: cache.rs  cli.rs  file_ui.rs  main.rs  request.rs  response.rs  ui.rs  utils.rs
src/config/: lib.rs
src/config/examples/: config.yaml
