[package]
name = "pepe"
version = "0.1.3"
authors = ["Omar MHAIMDAT"]
edition = "2021"
description = "HTTP load generator"
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3.17"
tokio-stream = "0.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "pepe"
path = "src/main.rs"

[package.metadata]
install.path = "/usr/local/bin"