[package]
name = "pepe"
version = "0.2.3"
authors = ["Omar MHAIMDAT"]
edition = "2021"
description = "HTTP load generator and performance testing tool"
readme = "README.md"
homepage = "https://github.com/omarmhaimdat/pepe"
repository = "https://github.com/omarmhaimdat/pepe"
keywords = ["testing", "performance", "benchmark", "stress", "utility"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
exclude = ["assets/*"]

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "hickory-dns",
    "socks",
] }
hyper = "1.5.2"
futures = "0.3.17"
tokio-stream = "0.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
indicatif = "0.17"
curl-parser = { "git" = "https://github.com/omarmhaimdat/curl-parser" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release.package."*"]
opt-level = 3
debug = false
strip = true

[[bin]]
name = "pepe"
path = "src/main.rs"

[package.metadata]
install.path = "/usr/local/bin"
